Move to styled-components Add some responsive views

--- a/now.json
+++ b/now.json
@@ -1,5 +1,10 @@
 {
-  "version": 2,
-  "scope": "unstacked",
-  "builds": [{ "src": "package.json", "use": "@now/next" }]
+    "version": 2,
+    "scope": "unstacked",
+    "builds": [
+        {
+            "src": "package.json",
+            "use": "@now/next"
+        }
+    ]
 }
