--- a/package.json
+++ b/package.json
@@ -1,38 +1,24 @@
 {
-  "private": true,
-  "scripts": {
-    "now-build": "next build",
-    "now-dev": "next -p $PORT",
-    "dev": "next",
-    "prettier": "npx prettier --write '{components,pages}/**/*.js'"
-  },
-  "dependencies": {
-    "@mdx-js/loader": "^1.5.3",
-    "@next/mdx": "^9.1.7",
-    "common-tags": "^1.8.0",
-    "fathom-client": "^2.0.2",
-    "isomorphic-unfetch": "^3.0.0",
-    "js-cookie": "^2.2.1",
-    "moment": "^2.24.0",
-    "next": "^9.2.1",
-    "next-cookies": "^2.0.3",
-    "prism-react-renderer": "^1.0.2",
-    "react": "^16.12.0",
-    "react-copy-to-clipboard": "^5.0.2",
-    "react-dom": "^16.12.0",
-    "react-outside-click-handler": "^1.3.0",
-    "react-svg": "^10.0.26",
-    "rehype-autolink-headings": "^2.0.5",
-    "rehype-slug": "^2.0.3",
-    "swr": "^0.1.16"
-  },
-  "devDependencies": {
-    "@fullhuman/postcss-purgecss": "^2.0.6",
-    "@types/node": "^13.1.6",
-    "@types/react": "^16.9.17",
-    "autoprefixer": "^9.7.3",
-    "prettier": "^1.19.1",
-    "tailwindcss": "^1.1.4",
-    "typescript": "^3.7.4"
-  }
+    "private": true,
+    "scripts": {
+        "now-build": "next build",
+        "now-dev": "next -p $PORT",
+        "dev": "next",
+        "prettier": "npx prettier --write '{components,pages,styles}/**/*.{js,ts,tsx}'"
+    },
+    "dependencies": {
+        "next": "^9.2.1",
+        "react": "^16.12.0",
+        "react-dom": "^16.12.0",
+        "react-svg": "^11.0.15",
+        "styled-components": "^5.0.1",
+        "styled-reset": "^4.1.2"
+    },
+    "devDependencies": {
+        "@types/node": "^13.1.6",
+        "@types/react": "^16.9.17",
+        "autoprefixer": "^9.7.3",
+        "prettier": "^2.0.2",
+        "typescript": "^3.7.4"
+    }
 }
