--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
         "now-build": "next build",
         "now-dev": "next -p $PORT",
         "dev": "next",
+        "export": "next export",
         "prettier": "npx prettier --write '{components,pages,styles}/**/*.{js,ts,tsx}'"
     },
     "dependencies": {
